# api-notas

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/api_notas/: __init__.py  base_datos.py  config.py  esquemas.py  main.py  modelos.py
src/api_notas/rutas/: __init__.py  notas.py
tests/: conftest.py  test_api.py
