[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "api-notas"
version = "1.0.0"
description = "API REST de notas personales con FastAPI, SQLAlchemy 2.0 y SQLite"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Brandon Albert Taipe Aguilar", email = "brandontaipe3@gmail.com" }]
keywords = ["fastapi", "notas", "api", "sqlite", "sqlalchemy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Natural Language :: Spanish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "httpx2>=2.0",
]

[project.urls]
Repository = "https://github.com/brandontbp3/api-notas"
Issues = "https://github.com/brandontbp3/api-notas/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]

[tool.ruff.lint.isort]
known-first-party = ["api_notas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
